<resources>
    <string name="app_name">Tables</string>
    <string name="start">Start</string>
    <string name="title">Master your Tables!</string>
    <string name="challenge">Uitdaging</string>
    <string name="oefenen">Oefenen</string>
    <string name="eindeloos">Eindeloos</string>
    <string name="resultTitle">Score!</string>
    <string name="naamInvoeren">Voer hier je naam in</string>
    <string name="submitNaam">Invoeren naam</string>
    <string name="top10">Top 10!</string>
    <string name="by">Door:</string>
    <string name="terug">Terug</string>
    <string name="play">Spelen</string>
    <string name="sleutels">Aantal sleutels:</string>
    <string name="plays">Aantal keer gespeeld:</string>
    <string name="highscore">Hoogste highscore:</string>
</resources>
